--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <button id="send">Envoyer</button>
 
     <script>
+        // Lorsque la page est chargée, envoyer le message "start" pour initier l'introduction
+        window.onload = async function() {
+            let response = await fetch("https://chatbot-omy3.onrender.com/backend.php", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ message: "start" })
+            });
+
+            let data = await response.json();
+            appendMessage("Chatbot", data.reply, "bot");
+        };
+
         document.getElementById("send").addEventListener("click", async function() {
             let userText = document.getElementById("userInput").value;
             if (!userText.trim()) return;
@@ -20,7 +32,6 @@
             appendMessage("Vous", userText, "user");
             document.getElementById("userInput").value = "";
 
-            // Envoie de la requête au backend
             let response = await fetch("https://chatbot-omy3.onrender.com/backend.php", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
@@ -28,12 +39,7 @@
             });
 
             let data = await response.json();
-
-            // Débogage : afficher la réponse du backend
-            console.log(data);  // Vérifie ce qui est renvoyé par le backend
-
-            // Si data.reply est valide, afficher la réponse
-            appendMessage("Chatbot", data.reply || "Je n'ai pas compris.", "bot");
+            appendMessage("Chatbot", data.reply, "bot");
         });
 
         function appendMessage(sender, text, className) {
