--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Chatbot - Savoir-Faire Français</h2>
+    <h2>Le Savoir-Faire Français</h2>
     <div id="chatbox"></div>
     <input type="text" id="userInput" placeholder="Posez une question...">
     <button id="send">Envoyer</button>
