--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Le Savoir-Faire Français</h2>
     <div id="chatbox"></div>
-    <input type="text" id="userInput" placeholder="Posez une question...">
+    <input type="text" id="userInput" placeholder="Message">
     <button id="send">Envoyer</button>
 
     <script>
