--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Le Savoir-Faire Français</h2>
-    <div id="chatbox"></div>
-    <input type="text" id="userInput" placeholder="Message">
-    <button id="send">Envoyer</button>
+    <div class="container">
+        <h2>Le Savoir-Faire Français</h2>
+        <div id="chatbox"></div>
+        <div class="input-container">
+            <input type="text" id="userInput" placeholder="Message">
+            <button id="send">Envoyer</button>
+        </div>
+    </div>
 
     <script>
         // Lorsque la page est chargée, envoyer le message "start" pour initier l'introduction
