--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="chatbox"></div>
         <div class="input-container">
             <input type="text" id="userInput" placeholder="Message">
-            <button id="send">Envoyer</button>
+            <button id="send">Envoi</button>
         </div>
     </div>
 
