--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- Section pour afficher le drapeau français -->
         <div class="flag">
-            <img src="main/drapeau-france-2.png" alt="Drapeau Français">
+            <img src="drapeau-france-2.png" alt="Drapeau Français">
         </div>
 
         <div id="chatbox"></div>
