--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
         <div class="flag">
             <img src="drapeau-france-2.png" alt="Drapeau Français">
         </div>
-
+        <!-- Section pour afficher le drapeau français -->
+        <div class="flag">
+            <img src="drapeau-canadien.png" alt="Drapeau Canadien">
+        </div>
         <div id="chatbox"></div>
         <div class="input-container">
             <input type="text" id="userInput" placeholder="Message">
