--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <h2>Le Savoir-Faire Français</h2>
 
         <!-- Section pour afficher le drapeau français -->
-        <div class="flag">
+        <div class="flag-fr">
             <img src="drapeau-france-2.png" alt="Drapeau Français">
         </div>
         <!-- Section pour afficher le drapeau français -->
-        <div class="flag">
+        <div class="flag-ca">
             <img src="drapeau-canadien.png" alt="Drapeau Canadien">
         </div>
         <div id="chatbox"></div>
