--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot Savoir-Faire Français</title>
+    
+    <!-- Ajouter l'icône de l'onglet -->
+    <link rel="icon" href="drapeau-croise.png" type="image/x-icon">
+    <!-- Si c'est un PNG -->
+    <!-- <link rel="icon" href="path/to/your-icon.png" type="image/png"> -->
+
     <link rel="stylesheet" href="style.css">
     <style>
         /* Style des points de chargement */
@@ -55,7 +61,7 @@
         <div class="flag-fr">
             <img src="drapeau-france-2.png" alt="Drapeau Français">
         </div>
-        <!-- Section pour afficher le drapeau français -->
+        <!-- Section pour afficher le drapeau canadien -->
         <div class="flag-ca">
             <img src="drapeau-canadien.png" alt="Drapeau Canadien">
         </div>
