--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Chatbot Savoir-Faire Français</title>
     
     <!-- Ajouter l'icône de l'onglet -->
-    <link rel="icon" href="drapeau-croise.png" type="image/x-icon">
-    <!-- Si c'est un PNG -->
-    <!-- <link rel="icon" href="path/to/your-icon.png" type="image/png"> -->
+    <link rel="icon" href="drapeau-croise.png" type="image/png">
 
     <link rel="stylesheet" href="style.css">
     <style>
