--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chatbot Savoir-Faire Français</title>
     
     <!-- Ajouter l'icône de l'onglet -->
-    <link rel="icon" href="drapeau-croise.png" type="image/png">
+    <link rel="icon" href="drapeau-croise.png" type="image/png" sizes="192x192">
 
     <link rel="stylesheet" href="style.css">
     <style>
